# solafune-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: run-pytest.yml
docs/: README.md  STAC_download.md  metrics_toolset.md  open_sourced_model  pr_guidelines.md
docs/community_tools/: README.md  spectral_indices.md  timelapse.md
docs/competition_tools/: README.md  pqs_validator.md  solafune_dataset_validator.md
requirements/: base.txt  super_resolution.txt
solafune_tools/: __init__.py  catalog_loader.py  image_fetcher.py  junk.py  make_catalog.py  make_mosaic.py  metrics.py  pipeline.py  settings.py
solafune_tools/community_tools/: README.md
solafune_tools/community_tools/spectral_indices/: README.md  core.py
solafune_tools/community_tools/timelapse/: __init__.py  core.py
solafune_tools/competition_tools/: README.md  __init__.py  pq_scoring_submission.py  quality_checker.py  solafune_dataset.py
solafune_tools/competitions/: README.md  __init__.py  pq_scoring_submission.py
solafune_tools/osm/super_resolution/: README.md  common_utils.py  config.py  create_dataset.py  inference.py  inference_big_image.py  model.py  preprocess.py  test.ipynb  train.py  train_continue.py
solafune_tools/osm/super_resolution/train_src/: preprocess_state.json  train_end.py  train_step1.py  train_step2.py  train_step3.py  train_step4.py
tests/: mock_get_catalog.py  test_competition_tools.py  test_get_catalog.py  test_image_fetcher.py  test_make_mosaic.py  test_metrics.py  test_settings.py  test_spectral_indices.py  test_timelapse.py  test_write_catalog.py
tests/data-test/: sample.json  sample_bbox.json  sample_segmentation.json
tests/data-test/geojson/: sample.geojson
tests/data-test/osm_sr/: test_image_normal.tif
tests/data-test/parquet/: sample.parquet
tests/test_osm/: test_super_resolution.py
