[project]
name = "solafune-tools"
version = "0.5.2"
description = "Solafune internal geodata management tools"
authors = [
    {name = "Solafune, Inc.", email = ""},
    {name = "Pushkar Kopparla", email = "pushkar.kopparla@solafune.com"},
    {name = "Toru Mitsutake", email = "toru.mitsutake@solafune.com"},
    {name = "Lanang Afkaar", email = "afkaar.lanang@solafune.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data", "docs"]
