[project]
name = "solafune-tools"
version = "0.9.0"
description = "Open tools for Solafune developers and Solafune hackers where can share developed tools in geospatial data"
authors = [
    {name = "Pushkar Kopparla", email = "pushkar.kopparla@solafune.com"},
    {name = "Toru Mitsutake", email = "toru.mitsutake@solafune.com"},
    {name = "Lanang Afkaar", email = "afkaar.lanang@solafune.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"] # Added "optional-dependencies"

# Base dependencies
[tool.setuptools.dynamic.dependencies]
file = ["requirements/base.txt"]

# Define optional dependencies here
[tool.setuptools.dynamic.optional-dependencies.super_resolution]
file = ["requirements/super_resolution.txt"]

# Optional dependencies for full installation
[tool.setuptools.dynamic.optional-dependencies.full]
file = ["requirements/super_resolution.txt"] 

[tool.setuptools.packages.find]
exclude = ["data", "docs"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"